adding in the branch template along with the link data files for each branch

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -50,3 +50,8 @@ body {
 .military-branch-select img {
     width: 80px;
 }
+
+.link-container {
+    background-color: white;
+    margin-top: 20px;
+}
