setup data for card ids, converted all cards to png, setup workspace panels to be toggleble

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -151,3 +151,11 @@ body {
 .hidden {
     display: none;
 }
+
+.workspace-panel {
+    display: none;
+}
+
+.workspace-panel.active {
+    display: block;
+}
