--- a/src/style/style.css
+++ b/src/style/style.css
@@ -17,6 +17,8 @@ body {
     font-size: 16px;
     padding: 0;
     margin: 0;
+    width: 100vw;
+    height: 100vh;
 }
 
 body {
@@ -235,9 +237,10 @@ p {
 
 .info-dialogBox {
     position: fixed;
-    top: 6%;
+    top: 6px;
     left: 20%;
     right: 20%;
+    bottom: 6px;
     display: block;
 }
 
