--- a/src/style/style.css
+++ b/src/style/style.css
@@ -297,3 +297,12 @@ p {
     width: 100vw;
     z-index: 1000;
 }
+
+.dropdown-item {
+    text-decoration: none;
+    border-bottom: 1px solid lightslategray;
+}
+
+.dropdown-item:last-child {
+    border-bottom: none;
+}
