--- a/src/style/style.css
+++ b/src/style/style.css
@@ -351,6 +351,19 @@ p {
     background: rgba(255, 255, 255, 0.55);
 }
 
+.calendarEventBar {
+    background-color: rgb(var(--army-primary-clr));
+    text-align: center;
+    margin-top: 5px;
+    font-weight: 600;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 400px;
+    width: 50%;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+}
+
 
 /* The switch - the box around the slider */
 
