--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2,6 +2,7 @@
     --army-primary-clr: 255, 193, 7;
 }
 
+@import "styleReset.css";
 * {
     margin: 0;
     padding: 0;
@@ -17,8 +18,8 @@ body {
     font-size: 16px;
     padding: 0;
     margin: 0;
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
     max-width: 100vw;
     overflow-x: hidden;
 }
@@ -41,15 +42,19 @@ p {
 .footer {
     background-color: rgb(var(--army-primary-clr))!important;
     z-index: 1;
+    padding: .2rem 1rem;
 }
 
 .nav-link {
     font-size: 1.4em;
+    margin-top: 0;
 }
 
 .main-content {
     display: block;
     min-height: calc(100vh - 140px);
+    padding-top: 70px;
+    padding-bottom: 40px;
 }
 
 .navbar a {
@@ -76,7 +81,7 @@ p {
     background-color: rgb(var(--army-primary-clr));
     width: 130px;
     margin: -48px 0 0 -25px;
-    padding: 30px 0 0 0;
+    padding: 60px 0 0 0;
     text-align: center;
     z-index: -10;
     border-bottom: 6px solid black;
@@ -203,12 +208,9 @@ p {
 }
 
 .footer {
-    position: relative;
+    position: fixed;
     bottom: 0;
-}
-
-.footer p {
-    max-width: 100%;
+    padding: 2px 8px 2px 4px;
 }
 
 .workspace-toolbar {
@@ -234,7 +236,7 @@ p {
     background: transparent;
     border-color: black;
     color: black;
-    font-size: 1.4em;
+    font-size: 1.2em;
 }
 
 .info-dialogBox {
@@ -356,7 +358,8 @@ p {
 .calendarEventBar {
     background-color: rgb(var(--army-primary-clr));
     text-align: center;
-    margin-top: 5px;
+    margin-top: 0;
+    padding: 4px 8px;
     font-weight: 600;
     display: block;
     margin-left: auto;
