fixing font awesome icon centering on buttons

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -24,6 +24,11 @@ body {
     overflow-x: hidden;
 }
 
+.fa,
+.fas {
+    padding-top: 3px;
+}
+
 body {
     background-image: url('../style/img/Army-Background.jpg');
     background-repeat: no-repeat;
