--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2,6 +2,7 @@
     --army-primary-clr: 255, 193, 7;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import "styleReset.css";
 * {
     margin: 0;
@@ -35,6 +36,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     min-height: 100vh;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1,
@@ -43,7 +45,12 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 4px;
+    margin: 6px;
+}
+
+h4 {
+    font-size: 1.4rem;
+    border-bottom: 1px solid rgba(112, 128, 144, 0.45);
 }
 
 p {
@@ -179,7 +186,7 @@ p {
 
 .card .card-title {
     background: rgb(var(--army-primary-clr));
-    padding: 1px 0 1px 3px;
+    padding: 4px 0 1px 3px;
     margin: -20px 0 0 0;
     display: flex;
     flex-direction: row;
@@ -200,11 +207,15 @@ p {
 .card-title button {
     align-content: flex-end;
     width: 40px;
-    font-size: 0.65em;
+    font-size: 0.75em;
+    height: 30px;
+    font-weight: 500;
+    padding: 3px 4px 3px 4px;
 }
 
 .card-title button:hover {
     cursor: pointer;
+    background: rgba(255, 255, 255, 0.8);
 }
 
 .email-link {
