fav z index bug
fixed z index bug on favicon

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -444,7 +444,7 @@ p {
 
 .favBtn {
     color: black;
-    z-index: 100;
+    /*z-index: 100;*/
     position: absolute;
     top: 0;
     right: 0;
