--- a/src/style/style.css
+++ b/src/style/style.css
@@ -308,6 +308,8 @@ p {
 .survey_form {
     margin-top: 10px;
     margin-bottom: 10px;
+    width: 100%;
+    display: block;
 }
 
 .survey_form label {
@@ -407,6 +409,21 @@ p {
     background-color: rgb(var(--army-primary-clr));
     color: black;
     text-decoration: none;
+}
+
+.disclaimer {
+    display: block;
+    font-size: 0.85;
+    text-align: center;
+    border: 1px solid black;
+    background: rgba(255, 255, 255, 0.25);
+    padding: 3px;
+}
+
+.disclaimer b {
+    font-weight: 900;
+    color: red;
+    font-size: 1.25em;
 }
 
 .info-dialogBox {
