--- a/src/components/layout/MainLayout.css
+++ b/src/components/layout/MainLayout.css
@@ -267,13 +267,16 @@ body {
 
     }
     .page-menu,
-    .body-page {
+    .page-menu.col-md-2,
+    .body-page,
+    .body-page.col-md-10 {
         flex: none;
         display: block;
         position: fixed!important;
         left: 0;
         right: 0;
         width: 100vw!important;
+        max-width: 100vw!important;
         background-color: rgba(0,0,0,.5)!important;
         padding: 8px 1px 8px 1px!important;
         margin: 0 0 0 0!important;
