--- a/src/style/style.css
+++ b/src/style/style.css
@@ -876,3 +876,46 @@ input:checked+.slider:before {
     padding: 2px;
     font-size: 0.9em;
 }
+
+.page-content {
+    display: block;
+    background-color: rgba(255, 255, 255, 0.70);
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 8px 5px 8px 5px;
+}
+
+.page-content p {
+    padding: 3px;
+}
+
+.page-content h1 {
+    font-size: 1.45em;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    padding-bottom: 3px;
+    margin-bottom: 5px;
+}
+
+.page-content h2 {
+    font-size: 1.25em;
+    color: rgba(0, 0, 0, 0.75);
+    margin-bottom: 5px;
+}
+
+.page-content strong {
+    font-weight: 900;
+}
+
+.page-content ul,
+.page-content ol {
+    display: block;
+    margin-left: 20px!important;
+}
+
+.page-content li {
+    list-style: decimal;
+    font-weight: 800;
+    padding: 4px 5px 4px 20px!important;
+
+}
