updated layout of apps
updated layouts and UI of PhraseFinder and GreenBook to work with the new tools of the new layout.

--- a/src/components/layout/MainLayout.css
+++ b/src/components/layout/MainLayout.css
@@ -190,6 +190,11 @@ body {
     flex: 10;
 }
 
+.content-wrapper.full {
+    display: block;
+    width: 100vw;
+}
+
 .content-wrapper > footer {
     margin-top: auto;
     height: 35px;
