--- a/src/applications/BarracksManagementTool/app.css
+++ b/src/applications/BarracksManagementTool/app.css
@@ -132,3 +132,20 @@
     background-color: rgba(255, 255, 255, 0.85)!important;
     color: black;
 }
+
+.dock-frame > div {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    flex: none;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    padding: 0;
+    margin: -20px 0 0 -1px!important;
+    border: 0!important;
+    z-index: 0;
+}
