Working on getting Navigator working
Navigator now has a tree menu view that the user can select root elements that will eventually send back a signal to the app to pass to the inspector.

--- a/src/applications/BarracksManagementTool/app.css
+++ b/src/applications/BarracksManagementTool/app.css
@@ -149,3 +149,8 @@
     border: 0!important;
     z-index: 0;
 }
+
+
+#NavigatorPanel .rstm-tree-item-group {
+    background-color: lightgrey!important;
+}
