styling the Navigator Panel

--- a/src/applications/BarracksManagementTool/app.css
+++ b/src/applications/BarracksManagementTool/app.css
@@ -150,7 +150,18 @@
     z-index: 0;
 }
 
+#NavigatorPanel,
+#NavigatorPanel .rstm-tree-item-group {
+    display: block;
+    height: 100%;
+    width: 100%;
+    position: relative; 
+    top: 0;
+    bottom: 0;
+    background-color: lightgrey!important;
+}
+
 
 #NavigatorPanel .rstm-tree-item-group {
-    background-color: lightgrey!important;
+    
 }
