fixed a scroll that shouldn't be there
fixed the stylesheet so that it didn't have a scroll bar on the content area when the no-scroll class was added and a 2nd scroll for the main body.

--- a/src/components/layout/MainLayout.css
+++ b/src/components/layout/MainLayout.css
@@ -175,8 +175,11 @@ body {
     overflow-y: scroll;
 }
 
-.main-content.no-scroll {
-    overflow: hidden;
+.main-content.no-scroll,
+.main-content.no-scroll .body-page {
+    overflow: hidden!important;
+    overflow-x: hidden!important;
+    overflow-y: hidden!important;
 }
 
 .scroll-panel {
