--- a/src/style/style.css
+++ b/src/style/style.css
@@ -24,6 +24,7 @@ body {
     min-height: 100vh;
     max-width: 100vw;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .fa,
@@ -97,7 +98,6 @@ p {
     padding: 2px;
     min-width: 300px;
 }
-
 
 /*.main-content {
     flex: 1;
