--- a/src/applications/BarracksManagementTool/app.css
+++ b/src/applications/BarracksManagementTool/app.css
@@ -161,7 +161,38 @@
     background-color: lightgrey!important;
 }
 
+#InspectorPanel > h1 {
+    background-color: lightgray;
+    color: black;
+    font-size: 1.9em;
+    padding: 3px;
+}
 
-#NavigatorPanel .rstm-tree-item-group {
-    
+#InspectorPanel > .array-list-view {
+    background-color: lightgray;
+    color: black;
+    text-align: right;
+}
+#InspectorPanel > .array-list-view > h2 {
+    text-align: left;
+    padding: 8px;
+    font-size: 1.4em;
+    margin-bottom: -6px;
+}
+
+#InspectorPanel > .array-list-view table {
+    border: #6c757d;
+    background-color: #6c757d;
+    text-align: left;
+    width: 100%;
+    min-height: 40px;
+}
+
+#InspectorPanel > .array-list-view > button {
+    position: relative;
+    right: 8px;
+    margin-top: -20px;
+    text-align: right;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
